Add main content: d3 to create and position circles, handlebars template to lay out the profiles

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,6 @@
     </header>
 
     <main>
-      <h1></h1>
     </main>
 
     <footer class="o-footer o-footer--theme-light" data-o-component="o-footer">
@@ -107,7 +106,7 @@
         </div>
       </div>
     </footer>
-      
+    <script src="https://bertha.ig.ft.com/view/publish/js/16LoUbTQLftX3SzK_GI_x7aguP_zMMCrT1bSWgG4fk98/basic,slides,groups,methodology,options,credits?d=spreadsheet"></script>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.bundle.js"></script>
     <!-- endbuild -->
