--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-  
+    <meta name="description" content="Discover where MBA graduates who are currently chief executive of an FT500 company went to business school">
+
+    <meta name="copyright" content="Financial Times">
+    <meta name="robots" content="index,follow">
+    <meta name="author" content="FT Interactive Graphics">
+    <meta property="og:site_name" content="From MBA to CEO interactive"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="From MBA to CEO of FT500 company"/>
+    <meta property="og:description" content="Discover where MBA graduates, who are currently chief executive of an FT500 company, went to business school" />
+    <meta property="og:image:url" content="https://image.webservices.ft.com/v1/images/raw/ftcms:f2fc94e2-999f-11e5-95c7-d47aa298f769?source=ig"/>
+    <meta property="fb:page_id" content="8860325749" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ft">
+    <meta name="twitter:creator" content="@ftdata">
+    <meta name="twitter:title" content="From MBA to CEO of FT500 company">
+    <meta name="twitter:description" content="Discover where MBA graduates, who are currently chief executive of an FT500 company, went to business school">
+    <meta name="twitter:image" content="https://image.webservices.ft.com/v1/images/raw/ftcms:f2fc94e2-999f-11e5-95c7-d47aa298f769?source=ig">
+
+
+   <link href="https://plus.google.com/113457471429583444041/" rel="publisher" />
     <link rel="shortcut icon" href="https://ig.ft.com/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="//im.ft-static.com/m/icons/apple-touch-icon.png">
 
-    <title>FT.com</title>
+    <title>From MBA to CEO</title>
     <!-- <meta name="description" content="ENTER A DESCRIPTION HERE"> -->
     
     <!-- smoosh -->
@@ -110,5 +130,6 @@
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.bundle.js"></script>
     <!-- endbuild -->
+    <!--#include virtual="/inc/extras-foot-2.html" -->
   </body>
 </html>
