Add o-buttons bower and add back to top button

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-GB" class="core">
+<html lang="en-GB" class="core o-hoverable-on">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://image.webservices.ft.com/v1/images/raw/ftcms:f2fc94e2-999f-11e5-95c7-d47aa298f769?source=ig">
 
 
-   <link href="https://plus.google.com/113457471429583444041/" rel="publisher" />
+    <link href="https://plus.google.com/113457471429583444041/" rel="publisher" />
     <link rel="shortcut icon" href="https://ig.ft.com/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="//im.ft-static.com/m/icons/apple-touch-icon.png">
 
