add metadata and university names for one and two alumni

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="Discover where MBA graduates who are currently chief executive of an FT500 company went to business school">
+    <meta name="description" content="Discover where MBA graduates who are currently chief executive of an FT500 company went to business school. Harvard Business school leads the pack followed by Insead, Stanford Business School, Chicago Booth, Wharton Business School, Kellogg, Columbia Business School, Darden School of Business, Vanderbilt and NYU Stern.">
 
     <meta name="copyright" content="Financial Times">
     <meta name="robots" content="index,follow">
@@ -29,7 +29,7 @@
     <link rel="shortcut icon" href="https://ig.ft.com/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="//im.ft-static.com/m/icons/apple-touch-icon.png">
 
-    <title>From MBA to CEO</title>
+    <title>From MBA to CEO: Which business schools did the CEOs of the FT500 go</title>
     <!-- <meta name="description" content="ENTER A DESCRIPTION HERE"> -->
     
     <!-- smoosh -->
