--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,15 @@
     <link href="https://plus.google.com/113457471429583444041/" rel="publisher" />
     <link rel="shortcut icon" href="https://ig.ft.com/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="//im.ft-static.com/m/icons/apple-touch-icon.png">
-
+    <script type="text/javascript">
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-35229645-1', 'auto');
+        ga('require','displayfeatures');
+        ga('send', 'pageview');
+    </script>
     <title>From MBA to CEO: Which business schools did the CEOs of the FT500 go</title>
     <!-- <meta name="description" content="ENTER A DESCRIPTION HERE"> -->
     
