--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
 
     <link href="https://plus.google.com/113457471429583444041/" rel="publisher" />
     <link rel="shortcut icon" href="https://ig.ft.com/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="//im.ft-static.com/m/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="https://ig.ft.com/apple-touch-icon.png">
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
